kubernetes/test/03-ingress.yml
# 03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx" 
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls: 
    - hosts:
        - isal.dev
      secretName: test-tls-t55xn-725790564
  rules:
    - host: isal.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard
                port:
                  number: 80
